# ledge-nectar

./: .gitignore  README.md
aqi/: README.md  pyproject.toml  requirements.txt
aqi/aqi/data/: README.md  ops_meta.xlsx  utils.py
aqi/aqi/stats/: README.md
aqi/aqi/utils/: common_setup.py
aqi/aqi/vizualisation/: utils.py
aqi/cluster_job/: RSF_NoRegion_FeatImp.py  RSF_NoRegion_FeatImp.sh  fit_RSF.py  fit_RSF.sh  fit_RSF2.py  fit_RSF2.sh  fit_RSF_NoRegion.py  fit_RSF_NoRegion.sh  fit_RSF_Region.sh
aqi/data/: ops_meta_loc.xlsx
aqi/example_data/: create_data.py  example_data.csv
aqi/notebooks/: 01_GenerateDataset.ipynb  02_CleanData.ipynb  02_clean_data.ipynb  03_fit_GLMM.ipynb  04_plot_GLMM.ipynb  05_fit_RF.ipynb  05_fit_RSF.ipynb  06_RiskMap_prediction.ipynb  Data analysis and visualization-checkpoint (Rebooted 08-2024).ipynb  Data analysis and visualization-checkpoint.ipynb  Data analysis and visualization.ipynb
aqi/utils/: common_setup.py  functions.py
sat2vec/: README.md
