[tool.poetry]
name = "aqi"
version = "0.1.0"
description = ""
authors = ["NicoCoallier <nico@nectar.buzz>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.1"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
scikit-survival = "^0.22.0"
lifelines = "^0.27.8"
pymer4 = "^0.8.1"
scikit-learn = "^1.3.1"
tqdm = "^4.66.1"
statsmodels = "^0.14.0"
jupyter = "^1.0.0"
jupyterlab = "^4.2.5"
ipykernel = "^6.29.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
